@@ -53,7 +53,6 @@ SaveAs.mnemonic=a
 SaveAs.accelerator.mac=meta shift S
 SaveAs.accelerator.other=ctrl shift S
 
-Save.Errors.notFocused=Focus is not on a hex viewer window.
 Save.confirmOverwrite=The file already exists.  Is it OK to overwrite it?
 
 Close.name=Close
@@ -76,24 +75,23 @@ AddAnnotation.okButton=Add
 AddAnnotation.enterValueForParameter=Enter a value for parameter: {0} ({1})
 AddAnnotation.enterValueForParameter.required=required
 AddAnnotation.enterValueForParameter.optional=optional
-AddAnnotation.Errors.notFocused=To add an annotation, focus must be on the hex viewer.
 AddAnnotation.Errors.overlap=You cannot create annotations which overlap each other.
 
-RemoveAnnotation.name=Remove Annotation
-RemoveAnnotation.Errors.notFocused=To remove an annotation, focus must be on the hex viewer.
-RemoveAnnotation.Errors.notAtAnnotation=To remove an annotation, the cursor must be at an annotation.
+Delete.name=Delete
+Delete.accelerator.mac=BACK_SPACE
+Delete.accelerator.other=DELETE
+Delete.Errors.notAtAnnotation=To remove an annotation, the cursor must be at an annotation.
 
 AddSubRegion.name=Add Sub-Region
-AddSubRegion.Errors.notFocused=To add a sub-region, focus must be on the hex viewer.
+AddSubRegion.accelerator.mac=S
+AddSubRegion.accelerator.other=S
 AddSubRegion.Errors.overlap=You cannot create annotations which overlap each other.
 
 RemoveSubRegion.name=Remove Sub-Region
-RemoveSubRegion.Errors.notFocused=To remove a sub-region, focus must be on the hex viewer.
 RemoveSubRegion.Errors.notAtSubRegion=To remove a sub-region, the cursor must be at a sub-region.
 
 # {0} is the name of a structure (or a file format)
 DropStructure.nameFormat=Drop {0}
-DropStructure.Errors.notFocused=To add a structure, focus must be on the hex viewer.
 DropStructure.Errors.catchAll=An error occurred trying to drop the structure onto the binary.  The most likely cause is that it isn't the structure you're looking for.
 
 # Help menu
